# Moraxia

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
compiler/: CMakeLists.txt  lexer.c  lexer.h  main.c
compiler/frontend/: CMakeLists.txt  main.c
compiler/frontend/include/lexeparser/: lexer.h  token.h
compiler/frontend/include/utils/: io.h
compiler/frontend/lexeparser/: lexer.c  token.c
compiler/frontend/utils/: io.c
frontend/: dune-project
frontend/lib/: dune
frontend/lib/lexeparser/: dune  lexer.ml  lexer.mli  token.ml
frontend/test/: dune
src/: lexer.c  lexer.h  main.c  main.mx
